--- a/index.html
+++ b/index.html
@@ -11,22 +11,33 @@
   <title>Frontend Mentor | Profile card component</title>
 </head>
 <body>
-  
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
-  <div class="attribution">
+  <section class="card-container">
+    <div class="card-background">
+      <img src="images/image-victor.jpg" alt="picture of Victor" class="profile-picture">
+    </div>
+    <h3>
+      Victor Crest <span>26</span>
+    </h3>
+    <h4>London</h4>
+    <hr>
+    <div class="social">
+      <div class="social-container">
+        <h3>80K</h3>
+        <span>Followers</span>
+      </div>
+      <div class="social-container">
+        <h3>803K</h3>
+        <span>Likes</span>
+      </div>
+      <div class="social-container">
+        <h3>1.4K</h3>
+        <span>Photos</span>
+      </div>
+    </div>
+  </section>
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Ionut Tripa</a>.
-  </div>
+    Coded by <a href="https://github.com/iTrip23" target="_blank">Ionut Tripa</a>.
+  </footer>
 </body>
 </html>
